fix font for elements not covered by global rule

--- a/client/src/styles/base.css
+++ b/client/src/styles/base.css
@@ -2,7 +2,8 @@ body * {
   font-family: 'Avenir'; 
 }
 
-.header {
+/* Elements not covered by above rule */
+.header, .ui.accordion .title:not(.ui) {
   font-family: 'Avenir' !important;
 }
 
